snippets/Nemerle.Statechart/Tests/testsuite/positive/completion_transitions_with_guards.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "completion transitions with guards";
  //flags debug;
  
  state A
  {
    entry / a1;
    _ [g1] / act1   => B;
    _ [else] / act2 => C;
  }

  state B
  {
    a => A;
  }
  
  state C
  {
    a => A;
  }
  #>)]
public class example
{
  public g1 : bool {get;set;}
}


module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("C", "a1", "EntryA", "ExitA", "act2", "EntryC");
    fsm.g1 = true;
    tester.Test("a", "B", "ExitC", "a1", "EntryA", "ExitA", "act1", "EntryB");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
a1
EntryA
ExitA
act2
EntryC
[C]
Ok
Processing a 'a' 
ExitC
a1
EntryA
ExitA
act1
EntryB
[B]
Ok
END-OUTPUT
*/
