snippets/Nemerle.Statechart/Tests/testsuite/negative/do_activity_duplicate_action.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "do activity with same name";
  
  state A
  {
    do / act1;
    a => B;
  }

  state B
  {
    entry / act1; // E: There is actions "act1\(\)" with same name as do activity "DoActivityA" this is not allowed
    a => A;
  }
  
  #>)]
public class example
{
}

